--- a/src/admin/scss/layout/_basic.scss
+++ b/src/admin/scss/layout/_basic.scss
@@ -42,17 +42,7 @@
         }
     }
     
-    /* &--products, &--orders, &--order-detail {        
+    &--events {        
         padding: 12rem;
     }
-    &--categories {
-        padding: 12rem;
-        
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    &--edit-product {
-        padding: 12rem;
-    } */
 }
