--- a/App/Views/admin/event-detail.html
+++ b/App/Views/admin/event-detail.html
@@ -7,17 +7,21 @@
     
     <div class="wrapper">
         
-        {% set headerVars = { 'logout': true, 'adminTitle': 'Akce' } %}
+        {% set dynamicTitle = event.event_title ?: 'Vytvořit' %}
+        {% set headerVars = { 'logout': true, 'adminTitle': 'Akce: ' ~ dynamicTitle } %}
         {% include 'admin/includes/header.html' with headerVars %}
 
         <main class="main main--index">
 
-            <div class="visiting-card">
-                <h3 class="heading-3">AmnioN Web</h3>
-                <p class="paragraph-normal">team@amnionweb.cz</p>
-                <p class="paragraph-normal">+420 735 044 114</p>
-                <a target="_blank" rel="noopener" href="https://amnionweb.cz"><p class="paragraph-normal">www.amnionweb.cz</p></a>
-            </div>
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
+            {{ event.event_id }}
             
         </main>
 
