--- a/App/Views/admin/events.html
+++ b/App/Views/admin/events.html
@@ -10,14 +10,40 @@
         {% set headerVars = { 'logout': true, 'adminTitle': 'Akce' } %}
         {% include 'admin/includes/header.html' with headerVars %}
 
-        <main class="main main--index">
+        <main class="main main--events">
 
-            <div class="visiting-card">
-                <h3 class="heading-3">AmnioN Web</h3>
-                <p class="paragraph-normal">team@amnionweb.cz</p>
-                <p class="paragraph-normal">+420 735 044 114</p>
-                <a target="_blank" rel="noopener" href="https://amnionweb.cz"><p class="paragraph-normal">www.amnionweb.cz</p></a>
+            <div class="item-list__options">
+                <!-- <input type="text" placeholder="Hledat"> -->
+                <a class="add-button" href="/admin/events/new">Nová akce</a>
             </div>
+
+            <table class="item-list">
+                <tbody class="item-list__content">
+                    <tr class="item-list__heading">
+                        <th>Název</th>
+                        <th>Datum</th>
+                        <th>Obrázek</th>
+                        <th>Odkaz</th>
+                        <th>Akce</th>
+                    </tr>
+
+                    {% for event in events %}
+
+                        <tr class="item-list__row" id="<%= product._id %>">
+                            <td>{{ event.event_title }}</td>
+                            <td>{{ event.event_date }}</td>
+                            <td>{{ event.event_imageUrl }}</td>
+                            <td>{{ event.event_link }}</td>
+                            <td>
+                                <a class="item-list__row__btn" href="/admin/events/{{ event.event_id }}">Upravit</a>
+                                <button class="item-list__row__btn item-list__row__btn--danger deleteProductBtn" data-id="<%= product._id %>" data-csrf="<%= csrfToken %>">Smazat</button>
+                            </td>
+                        </tr>
+
+                    {% endfor %}
+
+                </tbody>
+            </table>
             
         </main>
 
