--- a/src/admin/scss/main.scss
+++ b/src/admin/scss/main.scss
@@ -6,6 +6,9 @@
 @import 'base/typography';
 @import 'base/utilities';
 
+@import 'components/add-button';
+@import 'components/err-modal';
+@import 'components/item-list';
 @import 'components/login-form';
 @import 'components/visiting-card';
 
