--- a/src/admin/scss/main.scss
+++ b/src/admin/scss/main.scss
@@ -8,6 +8,7 @@
 
 @import 'components/add-button';
 @import 'components/err-modal';
+@import 'components/event-form';
 @import 'components/item-list';
 @import 'components/login-form';
 @import 'components/visiting-card';
