--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -7,5 +7,6 @@
 @import 'base/utilities';
 
 @import 'sections/cooperation';
+@import 'sections/events';
 @import 'sections/footer';
 @import 'sections/header';
