--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- DEFINING SVGs -->
+    <svg>
+        <defs>
+            <g id="treeBase">
+
+            </g>
+        </defs>
+    </svg>
 
     <!-- HEADER -->
     {{ include('includes/header.html') }}
