--- a/App/Views/includes/events.html
+++ b/App/Views/includes/events.html
@@ -1,3 +1,14 @@
 <section class="events">
-    
+    <!-- <svg width="325" height="520" viewBox="0 0 325 520" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#treeBase" />
+    </svg> -->
+    <div class="events__btn-block events__btn-block--back">
+        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="#eventBlock" />
+        </svg>
+    </div>
+    <div class="events__event"></div>
+    <div class="events__event"></div>
+    <div class="events__event"></div>
+    <div class="events__btn-block events__btn-block--next"></div>
 </section>
