--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -8,13 +8,7 @@
 </head>
 <body>
     <!-- DEFINING SVGs -->
-    <svg>
-        <defs>
-            <g id="treeBase">
-
-            </g>
-        </defs>
-    </svg>
+    {{ include('includes/svg.html') }}
 
     <!-- HEADER -->
     {{ include('includes/header.html') }}
