--- a/src/client/scss/abstracts/_variables.scss
+++ b/src/client/scss/abstracts/_variables.scss
@@ -1,1 +1,20 @@
+///////////////
+///// COLORS
+
+/////
+// COLORFUL COLORS
+/////
+
 $color-green-light: #F0F5E9;
+$color-green: #9CBD6F;
+
+
+/////
+// SHADES
+/////
+
+$color-black: #000000;
+$color-black-overlay: rgba($color-black, .5);
+$color-black-overlay-light: rgba($color-black, .2);
+$color-black-overlay-light-2: rgba($color-black, .1);
+$color-white: #ffffff;
