--- a/src/client/scss/base/_base.scss
+++ b/src/client/scss/base/_base.scss
@@ -11,7 +11,9 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Kalam', cursive;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 a,
