--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taťjana Horká</title>
+    <title>Taťjana Horká | Vzájemně v pohybu</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- DEFINING SVGs -->
