All svgs in svg.html

--- a/App/Views/includes/svg.html
+++ b/App/Views/includes/svg.html
@@ -167,6 +167,14 @@
             <stop stop-color="#9FBF73"/>
             <stop offset="1" stop-color="#9FBF73"/>
         </linearGradient>
+        <!-- headerBottom -->
+        <g id="headerBottom">
+            <path d="M0 254.377C0 254.377 216.5 342.735 507 301.534C797.5 260.333 1106 149.141 1299 45.8894C1492 -57.3617 1920 45.8894 1920 45.8894V417H0V254.377Z" fill="#9DBD70"/>
+        </g>
+        <!-- headerTop -->
+        <g id="headerTop">
+            <path d="M1920 32.0003C1920 32.0003 1831 67.2913 1556.5 76C1282 84.7087 848 19.6294 455.5 32.0003C63 44.3711 0 258.5 0 258.5L2.25988e-05 1.52537e-05L1920 0.000183105L1920 32.0003Z" fill="#9DBE70"/>
+        </g>
         <!-- institutions -->
         <g id="institutions">
             <g filter="url(#filter_institutions_0)">
@@ -216,6 +224,14 @@
             <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
             <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
         </filter>
+        <!-- organisationsBackground -->
+        <g id="organisationsBackground">
+            <path opacity="0.1" d="M0 39.9989H456.5C456.5 39.9989 709 62.9987 943.5 39.9989C1178 16.9991 1209.5 12 1437 1.49996C1664.5 -9.00004 1922 39.9989 1922 39.9989V465H0V39.9989Z" fill="url(#gradient_organisationsBackground_0)"/>
+        </g>
+        <linearGradient id="gradient_organisationsBackground_0" x1="4.80416e-05" y1="67.9999" x2="1922" y2="926" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#82A84E"/>
+            <stop offset="1" stop-color="#9FBF73"/>
+        </linearGradient>
         <!-- passedEventsBackground -->
         <g id="passedEventsBackground">
             <path d="M166.702 0H919V868H13.1406C-45.7596 531.119 109.091 341.018 166.702 0Z" fill="url(#gradient_passedEventsBackground_0)"/>
