--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,77 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.6rem; }
+
 .cooperation {
   width: 100%;
   color: red; }
+
+.header {
+  height: 90rem;
+  background-image: url("../img/fairy.jpeg");
+  background-size: cover;
+  position: relative; }
+  .header__svg {
+    position: absolute; }
+    .header__svg--top {
+      fill: #9DBE70;
+      height: 20rem;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 550; }
+    .header__svg--bottom {
+      fill: #9DBE70;
+      height: 30rem;
+      width: 100%;
+      bottom: 0;
+      left: 0; }
+      @media screen and (max-width: 1300px) {
+        .header__svg--bottom {
+          height: 20rem; } }
+    .header__svg--flower {
+      width: 10rem;
+      height: 10rem;
+      bottom: 24rem;
+      right: 5rem; }
+  .header__text {
+    font-family: "Dancing Script", cursive;
+    color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    bottom: 5rem;
+    right: 10rem; }
+    @media screen and (max-width: 1500px) {
+      .header__text {
+        right: 5rem;
+        bottom: 7rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__text {
+        bottom: 4rem; } }
+  .header__name {
+    font-size: 6rem; }
+    @media screen and (max-width: 1500px) {
+      .header__name {
+        font-size: 5rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__name {
+        font-size: 3.5rem; } }
+  .header__motto {
+    font-size: 8rem; }
+    @media screen and (max-width: 1500px) {
+      .header__motto {
+        font-size: 7rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__motto {
+        font-size: 6rem; } }
