Post merge adjustments

--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 90rem;
-  background-image: url("../img/fairy.jpeg");
+  background-image: url("../img/group.jpg");
   background-size: cover;
 
   position: relative;
