--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,17 @@
-<<<<<<< HEAD
-*, *::after, *::before {
-=======
 *,
 *::before,
 *::after {
->>>>>>> origin/ove
   margin: 0;
   padding: 0;
   box-sizing: inherit; }
 
 html {
-<<<<<<< HEAD
   font-size: 62.5%;
   box-sizing: border-box; }
 
 body {
   font-size: 1.6rem;
-  font-family: 'Kalam', cursive;
+  font-family: "Kalam", cursive;
   overflow-x: hidden;
   overflow-y: auto; }
 
@@ -27,7 +22,7 @@ a:link {
   color: inherit; }
 
 .heading-1 {
-  font-family: 'Dancing Script', cursive; }
+  font-family: "Dancing Script", cursive; }
 
 .heading-3 {
   font-size: 3.5rem;
@@ -110,6 +105,66 @@ a:link {
       top: 19rem;
       left: 5rem; }
 
+.header {
+  height: 90rem;
+  background-image: url("../img/group.jpg");
+  background-size: cover;
+  position: relative; }
+  .header__svg {
+    position: absolute; }
+    .header__svg--top {
+      fill: #9CBD6F;
+      height: 20rem;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 550; }
+    .header__svg--bottom {
+      fill: #9CBD6F;
+      height: 30rem;
+      width: 100%;
+      bottom: 0;
+      left: 0; }
+      @media screen and (max-width: 1300px) {
+        .header__svg--bottom {
+          height: 20rem; } }
+    .header__svg--flower {
+      width: 10rem;
+      height: 10rem;
+      bottom: 24rem;
+      right: 5rem; }
+  .header__text {
+    font-family: "Dancing Script", cursive;
+    color: white;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    bottom: 5rem;
+    right: 10rem; }
+    @media screen and (max-width: 1500px) {
+      .header__text {
+        right: 5rem;
+        bottom: 7rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__text {
+        bottom: 4rem; } }
+  .header__name {
+    font-size: 6rem; }
+    @media screen and (max-width: 1500px) {
+      .header__name {
+        font-size: 5rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__name {
+        font-size: 3.5rem; } }
+  .header__motto {
+    font-size: 8rem; }
+    @media screen and (max-width: 1500px) {
+      .header__motto {
+        font-size: 7rem; } }
+    @media screen and (max-width: 1300px) {
+      .header__motto {
+        font-size: 6rem; } }
+
 .passedEvents {
   width: 100vw;
   height: 80rem;
@@ -184,74 +239,3 @@ a:link {
       border-radius: 3rem;
       box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
       text-align: center; }
-=======
-  box-sizing: border-box;
-  font-size: 62.5%; }
-
-body {
-  font-size: 1.6rem; }
-
-.cooperation {
-  width: 100%;
-  color: red; }
-
-.header {
-  height: 90rem;
-  background-image: url("../img/fairy.jpeg");
-  background-size: cover;
-  position: relative; }
-  .header__svg {
-    position: absolute; }
-    .header__svg--top {
-      fill: #9DBE70;
-      height: 20rem;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 550; }
-    .header__svg--bottom {
-      fill: #9DBE70;
-      height: 30rem;
-      width: 100%;
-      bottom: 0;
-      left: 0; }
-      @media screen and (max-width: 1300px) {
-        .header__svg--bottom {
-          height: 20rem; } }
-    .header__svg--flower {
-      width: 10rem;
-      height: 10rem;
-      bottom: 24rem;
-      right: 5rem; }
-  .header__text {
-    font-family: "Dancing Script", cursive;
-    color: white;
-    text-align: center;
-    position: absolute;
-    z-index: 1;
-    bottom: 5rem;
-    right: 10rem; }
-    @media screen and (max-width: 1500px) {
-      .header__text {
-        right: 5rem;
-        bottom: 7rem; } }
-    @media screen and (max-width: 1300px) {
-      .header__text {
-        bottom: 4rem; } }
-  .header__name {
-    font-size: 6rem; }
-    @media screen and (max-width: 1500px) {
-      .header__name {
-        font-size: 5rem; } }
-    @media screen and (max-width: 1300px) {
-      .header__name {
-        font-size: 3.5rem; } }
-  .header__motto {
-    font-size: 8rem; }
-    @media screen and (max-width: 1500px) {
-      .header__motto {
-        font-size: 7rem; } }
-    @media screen and (max-width: 1300px) {
-      .header__motto {
-        font-size: 6rem; } }
->>>>>>> origin/ove
