--- a/src/client/scss/base/_base.scss
+++ b/src/client/scss/base/_base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: 'Kalam', cursive;
+    font-family: $font-kalam;
     overflow-x: hidden;
     overflow-y: auto;
 }
