--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -1,6 +1,6 @@
 
 <header class="header">
-  <svg class="header__svg header__svg--top" preserveAspectRatio="none" viewBox="0 0 1920 259" fill="green" xmlns="http://www.w3.org/2000/svg">
+  <svg class="header__svg header__svg--top" fill="green" xmlns="http://www.w3.org/2000/svg">
   <!--   <path
       d="M1920 32.0003C1920 32.0003 1831 67.2913 1556.5 76C1282 84.7087 848 19.6294 455.5 32.0003C63 44.3711 0 258.5 0 258.5L2.25988e-05 1.52537e-05L1920 0.000183105L1920 32.0003Z"
       fill="#9DBE70"
