--- a/App/Views/includes/svg.html
+++ b/App/Views/includes/svg.html
@@ -224,11 +224,11 @@
             <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
             <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
         </filter>
-        <!-- organisationsBackground -->
-        <g id="organisationsBackground">
-            <path opacity="0.1" d="M0 39.9989H456.5C456.5 39.9989 709 62.9987 943.5 39.9989C1178 16.9991 1209.5 12 1437 1.49996C1664.5 -9.00004 1922 39.9989 1922 39.9989V465H0V39.9989Z" fill="url(#gradient_organisationsBackground_0)"/>
+        <!-- organizationsBackground -->
+        <g id="organizationsBackground">
+            <path opacity="0.1" d="M0 39.9989H456.5C456.5 39.9989 709 62.9987 943.5 39.9989C1178 16.9991 1209.5 12 1437 1.49996C1664.5 -9.00004 1922 39.9989 1922 39.9989V465H0V39.9989Z" fill="url(#gradient_organizationsBackground_0)"/>
         </g>
-        <linearGradient id="gradient_organisationsBackground_0" x1="4.80416e-05" y1="67.9999" x2="1922" y2="926" gradientUnits="userSpaceOnUse">
+        <linearGradient id="gradient_organizationsBackground_0" x1="4.80416e-05" y1="67.9999" x2="1922" y2="926" gradientUnits="userSpaceOnUse">
             <stop stop-color="#82A84E"/>
             <stop offset="1" stop-color="#9FBF73"/>
         </linearGradient>
