--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -1,1 +1,23 @@
-FOOTER
+        <!--FOOTER-->
+        <footer class="footer">
+            <div class="footer__columns">
+                <div class="footer__columns__contact">
+                    <h2 class="heading-2">Kontakt</h2>
+                    <p class="paragraph-1">Ič: 079 52 320</p>
+                    <p class="paragraph-1">tatjanahorka@gmail.com</p>
+                    <p class="paragraph-1 paragraph-1__break">+420 777 743 704</p>
+                    <p class="paragraph-1">Volejte Po - Pá mezi 18:00-19:00</p>
+                </div>
+                <div class="footer__columns__price">
+                    <h2 class="heading-2">Cena za konzultační služby</h2>
+                    <p class="paragraph-1">Individuální konzultační hodina / 2 500 Kč</p>
+                    <p class="paragraph-1">Párová konzultační hodina / 3 700 Kč</p>
+                    <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5 000 Kč</p>
+                    <p class="paragraph-1">Cestovní náhrady jsou stanoveny podle počtu kilometrů</p>
+                </div>
+                <div class="footer__columns__help">
+                    <h2 class="heading-2">S tvorbou webu pomohl</h2>
+                    <img src="" alt="Amnion Web" class="footer__columns__help__photo">
+                </div>
+            </div>   
+        </footer>
