--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,29 @@
+.heading-2 {
+  font-weight: 400;
+  font-size: 3.3rem;
+  margin-bottom: 5rem; }
+
+.paragraph-1 {
+  font-size: 2rem; }
+  .paragraph-1__break {
+    margin-bottom: 5rem; }
+
 .cooperation {
   width: 100%;
   color: red; }
+
+.footer {
+  width: 100vw;
+  height: 40rem;
+  padding: 10rem;
+  background-color: #9fbf73;
+  color: white; }
+  .footer__columns {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    .footer__columns__help__photo {
+      width: 40rem;
+      height: 22rem;
+      background-color: red; }
